// Vitest Snapshot v1

exports[`Link > :props > :content 1`] = `
<div>
  <a
    class="t-link t-link--theme-default t-link--hover-underline"
    target=""
  >
    bar
  </a>
  <a
    class="t-link t-link--theme-default t-link--hover-underline"
    target=""
  >
    bar
  </a>
  <a
    class="t-link t-link--theme-default t-link--hover-underline"
    target=""
  >
    foo
  </a>
  <a
    class="t-link t-link--theme-default t-link--hover-underline"
    target=""
  >
    foo
  </a>
  <a
    class="t-link t-link--theme-default t-link--hover-underline"
    target=""
  >
    bar
  </a>
</div>
`;

exports[`Link > :props > :disabled 1`] = `
<a
  class="t-link t-link--theme-default t-is-disabled"
  target=""
>
  text
</a>
`;

exports[`Link > :props > :hover 1`] = `
<a
  class="t-link t-link--theme-default t-link--hover-color"
  target=""
>
  text
</a>
`;

exports[`Link > :props > :size 1`] = `
<a
  class="t-link t-link--theme-default t-size-l t-link--hover-underline"
  target=""
>
  text
</a>
`;

exports[`Link > :props > :theme 1`] = `
<a
  class="t-link t-link--theme-primary t-link--hover-underline"
  target=""
>
  text
</a>
`;

exports[`Link > :props > :underline 1`] = `
<a
  class="t-link t-link--theme-default t-is-underline t-link--hover-underline"
  target=""
>
  text
</a>
`;

exports[`Link > <slot> > <icon> 1`] = `
<a
  class="t-link t-link--theme-default t-link--hover-underline"
  target=""
/>
`;
